# termai-rerank

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.inference  README.md  pyproject.toml
.github/workflows/: test-build-push.yml
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/endpoints/: health.py  metrics.py  models.py  rerank.py
app/core/: config.py  exceptions.py  handlers.py
app/domain/: contracts.py
app/lifecycle/: startup.py
app/middleware/: metrics.py  request_id.py
app/models/: base.py  bge.py  msmarco.py
app/observability/: logging.py  metrics.py
app/schemas/: errors.py  health.py  models.py  rerank.py
app/services/: model_registry.py  rerank_service.py  runtime_state.py
app/utils/: request_context.py
k8s/: deployment.yaml  ingress.yaml  service.yaml
tests/: conftest.py  test_api.py  test_model_registry.py  test_rerank_service.py
